2024-04-16T08:14:43Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/8702222788 # 187
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2024-04-16
* notice: last 14d: unq all: 3 3
* notice: prev accum: outdated-unq outdated-all / unq all: 639 1101 / 641 1103
* notice: next accum: outdated-unq outdated-all / unq all: 639 1101 / 642 1104
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2024-04-16]

2024-04-15T16:14:08Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/8692488929 # 185
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2024-04-15
* notice: last 14d: unq all: 2 2
* notice: prev accum: outdated-unq outdated-all / unq all: 639 1101 / 640 1102
* notice: next accum: outdated-unq outdated-all / unq all: 639 1101 / 641 1103
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2024-04-15]

2024-04-15T03:15:38Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/8682711697 # 183
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2024-04-15
* notice: last 14d: unq all: 1 1
* notice: prev accum: outdated-unq outdated-all / unq all: 625 1073 / 639 1101
* notice: next accum: outdated-unq outdated-all / unq all: 639 1101 / 640 1102
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2024-02-22 2024-02-23 2024-02-24 2024-02-25 2024-02-26 2024-02-27 2024-02-28 2024-02-29 2024-03-01 2024-03-02 2024-03-03 2024-03-04 2024-03-05 2024-03-06] / [2024-04-14]