@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2024-04-16T08:14:43Z",
+  "timestamp" : "2024-04-16T16:15:09Z",
   "count_outdated" : 1101,
   "uniques_outdated" : 639,
-  "count" : 1104,
+  "count" : 1105,
   "uniques" : 642,
   "clones" : [
     {
@@ -25,9 +25,9 @@
     },
     {
       "timestamp": "2024-04-16T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
+      "count_decinc": [ 0, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
