@@ -1,5 +1,5 @@
 {
-  "count": 3,
+  "count": 4,
   "uniques": 3,
   "clones": [
     {
@@ -14,7 +14,7 @@
     },
     {
       "timestamp": "2024-04-16T00:00:00Z",
-      "count": 1,
+      "count": 2,
       "uniques": 1
     }
   ]
